sku上架，扩展属性
