# proto/micro_mall_sku_proto/sku_business/sku.swagger.json
@@ -13,6 +13,7 @@
   "paths": {
     "/v1/sku/list": {
       "get": {
+        "summary": "获取店铺sku列表",
         "operationId": "GetSkuList",
         "responses": {
           "200": {
@@ -29,6 +30,33 @@
             "required": false,
             "type": "string",
             "format": "int64"
+          }
+        ],
+        "tags": [
+          "SkuBusinessService"
+        ]
+      }
+    },
+    "/v1/sku/property/supplement": {
+      "put": {
+        "summary": "补充sku商品属性",
+        "operationId": "SupplementSkuProperty",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/sku_businessSupplementSkuPropertyResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/sku_businessSupplementSkuPropertyRequest"
+            }
           }
         ],
         "tags": [
@@ -198,6 +226,54 @@
         }
       },
       "title": "商品库存数据"
+    },
+    "sku_businessSupplementSkuPropertyRequest": {
+      "type": "object",
+      "properties": {
+        "op_uid": {
+          "type": "string",
+          "format": "int64"
+        },
+        "op_ip": {
+          "type": "string"
+        },
+        "shop_id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "sku_code": {
+          "type": "string"
+        },
+        "size": {
+          "type": "string"
+        },
+        "shape": {
+          "type": "string"
+        },
+        "production_country": {
+          "type": "string"
+        },
+        "production_date": {
+          "type": "string"
+        },
+        "shelf_life": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "operation_type": {
+          "$ref": "#/definitions/sku_businessOperationType"
+        }
+      }
+    },
+    "sku_businessSupplementSkuPropertyResponse": {
+      "type": "object",
+      "properties": {
+        "common": {
+          "$ref": "#/definitions/sku_businessCommonResponse"
+        }
+      }
     }
   }
 }
