# server/sku_business.go
@@ -27,6 +27,16 @@ func (s *SkuBusinessServer) PutAwaySku(ctx context.Context, req *sku_business.Pu
 	}
 	retCode := service.PutAwaySku(ctx, req)
 	if retCode != code.Success {
+		if retCode == code.SkuCodeExist {
+			result.Common.Code = sku_business.RetCode_SKU_EXIST
+			result.Common.Msg = errcode.GetErrMsg(code.SkuCodeExist)
+			return &result, nil
+		}
+		if retCode == code.ShopBusinessNotExist {
+			result.Common.Code = sku_business.RetCode_SHOP_NOT_EXIST
+			result.Common.Msg = errcode.GetErrMsg(code.ShopBusinessNotExist)
+			return &result, nil
+		}
 		result.Common.Code = sku_business.RetCode_ERROR
 		result.Common.Msg = errcode.GetErrMsg(code.ErrorServer)
 		return &result, nil
@@ -38,5 +48,67 @@ func (s *SkuBusinessServer) PutAwaySku(ctx context.Context, req *sku_business.Pu
 }
 
 func (s *SkuBusinessServer) GetSkuList(ctx context.Context, req *sku_business.GetSkuListRequest) (*sku_business.GetSkuListResponse, error) {
-	return &sku_business.GetSkuListResponse{}, nil
+	var result sku_business.GetSkuListResponse
+	result.List = make([]*sku_business.SkuInventoryInfo, 0)
+	list, retCode := service.GetSkuList(ctx, req)
+	if retCode != code.Success {
+		return &result, errcode.TogRPCError(retCode)
+	}
+	result.List = make([]*sku_business.SkuInventoryInfo, len(list))
+	for i := 0; i < len(list); i++ {
+		info := &sku_business.SkuInventoryInfo{
+			SkuCode:       list[i].SkuCode,
+			Name:          list[i].Name,
+			Price:         list[i].Price,
+			Title:         list[i].Title,
+			SubTitle:      list[i].SubTitle,
+			Desc:          list[i].Desc,
+			Production:    list[i].Production,
+			Supplier:      list[i].Supplier,
+			Category:      list[i].Category,
+			Color:         list[i].Color,
+			ColorCode:     list[i].ColorCode,
+			Specification: list[i].Specification,
+			DescLink:      list[i].DescLink,
+			State:         list[i].State,
+			Amount:        list[i].Amount,
+			ShopId:        list[i].ShopId,
+		}
+		result.List[i] = info
+	}
+
+	return &result, nil
+}
+
+func (s *SkuBusinessServer) SupplementSkuProperty(ctx context.Context, req *sku_business.SupplementSkuPropertyRequest) (*sku_business.SupplementSkuPropertyResponse, error) {
+	var result sku_business.SupplementSkuPropertyResponse
+	result.Common = &sku_business.CommonResponse{
+		Code: 0,
+		Msg:  "",
+	}
+	if req.SkuCode == "" {
+		result.Common.Code = sku_business.RetCode_SKU_NOT_EXIST
+		result.Common.Msg = errcode.GetErrMsg(code.SkuCodeNotExist)
+		return &result, nil
+	}
+	retCode := service.SupplementSkuProperty(ctx, req)
+
+	if retCode != code.Success {
+		if retCode == code.SkuCodeExist {
+			result.Common.Code = sku_business.RetCode_SKU_EXIST
+			result.Common.Msg = errcode.GetErrMsg(code.SkuCodeExist)
+			return &result, nil
+		}
+		if retCode == code.ShopBusinessNotExist {
+			result.Common.Code = sku_business.RetCode_SHOP_NOT_EXIST
+			result.Common.Msg = errcode.GetErrMsg(code.ShopBusinessNotExist)
+			return &result, nil
+		}
+		result.Common.Code = sku_business.RetCode_ERROR
+		result.Common.Msg = errcode.GetErrMsg(code.ErrorServer)
+		return &result, nil
+	}
+	result.Common.Code = sku_business.RetCode_SUCCESS
+	result.Common.Msg = errcode.GetErrMsg(code.Success)
+	return &result, nil
 }
